expt/expt-new/netperf-client-intranode.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netperf-client-intra
  namespace: test
  labels:
    app: netperf-client
    User: user1
    key4: value0
spec:
  nodeName: worker-1
  containers:
  - image: leannet/k8s-netperf:latest
    name: netperf-client-same
    ports:
    - containerPort: 12865
    imagePullPolicy: IfNotPresent
