expt/expt-new/coreDNS_Networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-dns-core
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: experiment-controller
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          role: admin
