expt/expt-new/host-network-policy-withports.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: host-node-policy
  namespace: test
spec:
  podSelector:
    matchLabels:
      User: user1
      key4: value3
      key1: value3
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    - namespaceSelector:
        matchLabels:
          role: admin
    - podSelector:
        matchLabels:
          User: user1
          key4: value0
    ports:
    - protocol: TCP
      port: 12865
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - podSelector:
        matchLabels:
          User: user1
          key4: value0
    ports:
    - protocol: TCP
      port: 12865
